--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,7 @@ h1, h2 {
 #logo {
     float: left;
     font-size: 280%;
+    margin-left: 30px;
 }
 #menu {
     font-size: 110;
@@ -96,7 +97,28 @@ h1, h2 {
 
     position: absolute;
 }
+/* club ethos */
 
+#club-ethos {
+    height: 600px;
+}
+#left-about {
+    padding-top: 30%;
+    width: 33%;
+    float: left;
+    background-color: blue;
+}
+#right-about {
+    padding-top: 30%;
+    width: 33%;
+    float: right;
+    background-color: silver;
+}
+#center-aboout {
+    width: 33%;
+    margin: 0 auto;
+background-color: green;
+}
 
 
 
