--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,13 +103,13 @@ h1, h2 {
     height: 600px;
 }
 #left-about {
-    padding-top: 30%;
+    padding-top: 30px;
     width: 33%;
     float: left;
     background-color: blue;
 }
 #right-about {
-    padding-top: 30%;
+    padding-top: 30px;
     width: 33%;
     float: right;
     background-color: silver;
@@ -120,5 +120,24 @@ h1, h2 {
 background-color: green;
 }
 
+hr {
+    border-top: 1px solid #3a3a3a;
+    width: 100%;
+    margin: 5px 0;
+}
+.left-about-heading {
+    width: 60%;
+    float: right;
+    line-height: 20px;
+    clear: both;
+    margin-bottom: 50px;
+}
 
+.right-about-heading {
+    width: 60%;
+    float: left;
+    line-height: 20px;
+    clear: both;
+    margin-bottom: 50px;
+}
 
