--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,22 +102,22 @@ h1, h2 {
 #club-ethos {
     height: 600px;
 }
+
 #left-about {
     padding-top: 30px;
     width: 33%;
     float: left;
-    background-color: blue;
 }
+
 #right-about {
     padding-top: 30px;
     width: 33%;
     float: right;
-    background-color: silver;
 }
-#center-aboout {
+
+#center-about {
     width: 33%;
     margin: 0 auto;
-background-color: green;
 }
 
 hr {
@@ -140,4 +140,29 @@ hr {
     clear: both;
     margin-bottom: 50px;
 }
-
+.right-about-heading h2 {
+    text-align: right;
+}
+.right-about-heading p {
+    text-align: right;
+}
+#welcome {
+    text-align: center;
+    margin: 20px 0;
+    font-size: 280%;
+}
+#circle-container {
+    width: 300px;
+    height: 300px;
+    padding: 30px;
+    border-style: solid;
+    border-color: #ccc;
+    border-width: 1px;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+#circle-cover-bg {
+    background: url('../image/ethos-center-image.jpeg') no-repeat center center;
+    height: 100%;
+    border-radius: 50%;
+}
